doc: update swagger annotation for permission
