# docs/swagger.json
@@ -186,7 +186,7 @@
                                             "additionalProperties": {
                                                 "type": "array",
                                                 "items": {
-                                                    "type": "string"
+                                                    "$ref": "#/definitions/dto.PermissionResponse"
                                                 }
                                             }
                                         }
@@ -1948,9 +1948,28 @@
                     "type": "string"
                 },
                 "role": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "user",
+                        "admin",
+                        "root"
+                    ]
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PermissionResponse": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "permission": {
                     "type": "string"
                 }
             }
@@ -2060,7 +2079,12 @@
                     "type": "string"
                 },
                 "role": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "user",
+                        "admin",
+                        "root"
+                    ]
                 },
                 "username": {
                     "type": "string"
